# task-utils

./: LICENSE  README.md  main.py  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md
docs/api/: gui.md  sgen.md
src/task_utils/: __init__.py  _utils.py  _yaml.py  io.py
src/task_utils/gui/: widgets.py
src/task_utils/sgen/: __init__.py  io.py
